# mcp-sudact

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json
src/atomno_mcp_sudact/: __init__.py  client.py  config.py  errors.py  server.py
tests/: test_cli.py  test_client.py
