[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-sudact"
version = "0.1.6"
description = "Thin MCP client for Russian court practice (Sudact) hosted API: full-text case search + full decision text. Engine is hosted; this package only talks to the atomno-mcp backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomno-mcp", email = "hello@atomno-mcp.ru" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "sudact",
  "kad",
  "legal",
  "court-practice",
  "russia",
  "atomno",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Typing :: Typed",
]

dependencies = [
  "fastmcp>=2.0.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "ruff>=0.5.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-sudact"
Repository = "https://github.com/atomno-mcp/mcp-sudact"
Issues = "https://github.com/atomno-mcp/mcp-sudact/issues"
Changelog = "https://github.com/atomno-mcp/mcp-sudact/blob/main/CHANGELOG.md"
Documentation = "https://atomno-mcp.ru/mcp/sudact"

[project.scripts]
atomno-mcp-sudact = "atomno_mcp_sudact.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atomno_mcp_sudact"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "B008"]
